@startuml

title __ACTIVITIES's Class Diagram__\n

  namespace com.example.safedrive {
    namespace activities {
      class com.example.safedrive.activities.MyAdapter {
          ~ dataholder : ArrayList<Model>
          + MyAdapter()
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
      }
    }
  }
  

  namespace com.example.safedrive {
    namespace activities {
      class com.example.safedrive.activities.MyAdapter.MyViewHolder {
          ~ clas : TextView
          ~ id : TextView
          ~ left_ankle_x : TextView
          ~ left_ankle_y : TextView
          ~ left_ear_x : TextView
          ~ left_ear_y : TextView
          ~ left_elbow_x : TextView
          ~ left_elbow_y : TextView
          ~ left_eye_x : TextView
          ~ left_eye_y : TextView
          ~ left_hip_x : TextView
          ~ left_hip_y : TextView
          ~ left_knee_x : TextView
          ~ left_knee_y : TextView
          ~ left_shoulder_x : TextView
          ~ left_shoulder_y : TextView
          ~ left_wrist_x : TextView
          ~ left_wrist_y : TextView
          ~ nose_x : TextView
          ~ nose_y : TextView
          ~ right_ankle_x : TextView
          ~ right_ankle_y : TextView
          ~ right_ear_x : TextView
          ~ right_ear_y : TextView
          ~ right_elbow_x : TextView
          ~ right_elbow_y : TextView
          ~ right_eye_x : TextView
          ~ right_eye_y : TextView
          ~ right_hip_x : TextView
          ~ right_hip_y : TextView
          ~ right_knee_x : TextView
          ~ right_knee_y : TextView
          ~ right_shoulder_x : TextView
          ~ right_shoulder_y : TextView
          ~ right_wrist_x : TextView
          ~ right_wrist_y : TextView
          ~ score : TextView
          + MyViewHolder()
      }
    }
  }
  

  com.example.safedrive.activities.MyAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.safedrive.activities.MyAdapter +-down- com.example.safedrive.activities.MyAdapter.MyViewHolder
  com.example.safedrive.activities.MyAdapter.MyViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
